Support releasing of delays.