@@ -6,7 +6,7 @@
 ;;   the terms of this license.
 ;;   You must not remove this notice, or any other, from this software.
 
-(defproject uncomplicate/commons "0.16.1"
+(defproject uncomplicate/commons "0.17.0-SNAPSHOT"
            :description "Common Uncomplicate utilities."
   :url "https://github.com/uncomplicate/commons"
   :scm {:name "git"
@@ -28,8 +28,6 @@
                            :source-uri "http://github.com/uncomplicate/commons/blob/master/{filepath}#L{line}"
                            :output-path "docs/codox"
                            :themes [:rdash]}
-                   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"
-                                        "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
-                                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]}}
+                   :jvm-opts ^:replace ["-Dclojure.compiler.direct-linking=true"]}}
 
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"])
